[package]
name = "canutils"
version = "1.0.0"
license = "MIT"
description = "A can-utils implementation in pure Rust"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
homepage = "https://github.com/marcelbuesing/canutils-rs"
repository = "https://github.com/marcelbuesing/canutils-rs.git"
keywords = ["can-utils", "can", "automotive", "ecu"]
documentation = "https://docs.rs/canutils"
readme = "README.md"

# [badges]
# travis-ci = { repository = "marcelbuesing/canutils-rs", branch = "master" }

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.98"
can-dbc = "6.0.0"
futures = "0.3.31"
pretty-hex = "0.4.1"
nom = "8.0.0"
rand = "0.9.1"
rand_core = "0.9.3"
serde = { version = "1.0.219", optional = true }
serde_derive = { version = "1.0.219", optional = true }
structopt = "0.3.26"
socketcan = { version = "3.5.0", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["full"] }

[[bin]]
name = "candumprb"
path = "src/bin/candumprb.rs"

[[bin]]
name = "cangenrb"

[[bin]]
name = "canstatsrb"

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
with-serde = ["serde", "serde_derive"]
